--- a/public/style.css
+++ b/public/style.css
@@ -5,3 +5,14 @@ html {
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
+.buttons {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  padding: 0.5em;
+  margin: 1em;
+  font-size: 1em;
+}
