--- a/public/style.css
+++ b/public/style.css
@@ -3,25 +3,43 @@ html {
   text-align: center;
   font-size: 2em;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica;
+}
+body {
+  background: url('nnbg.jpg');
+
+  background-size: 100vw auto;
 }
 .buttons {
   margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   width: 80%;
+  font-family: Helvetica;
 }
 
 button {
   padding: 0.5em;
-  margin: 1em;
+  margin: 0;
   font-size: 0.5em;
   width: 10em;
   height: 5em;
+  color: #8f2d56;
+  background-color: #eefafb;
+  outline: none;
+  border-color: #d81159;
+  border-width: 15px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+button:hover {
+  border-color: #ffbc42;
 }
 
 h1 {
   text-decoration: underline;
+  color: #218380;
+  text-decoration-color: #ffbc42;
 }
 
 p {
